[package]
name = "issuefer"
version = "0.1.0"
authors = ["Hans-Peter Schadler <hps@abyle.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
reqwest = { version = "0.10", features = ["json", "blocking"] }
rust-ini = "0.15"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3.1"
serde_json = "1.0"
serde_derive = "1.0.107"
